# espn-sports-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  publish.yml
espn_sports_api/: __init__.py  client.py  constants.py  exceptions.py  fantasy.py  models.py  odds.py
espn_sports_api/sports/: __init__.py  base.py  cfl.py  college.py  golf.py  mlb.py  nba.py  nfl.py  nhl.py  racing.py  soccer.py  tennis.py  ufc.py  wnba.py  xfl.py
examples/: README.md
examples/notebooks/: explore_sports_data.ipynb
examples/scripts/: nfl_example.py  soccer_epl_example.py
tests/: __init__.py  conftest.py  test_cache.py  test_client.py  test_client_unit.py  test_convenience.py  test_fantasy.py  test_fantasy_unit.py  test_models.py  test_odds.py  test_smoke.py  test_sport_methods_unit.py  test_sports.py  test_sports_unit.py
